classDiagram
    %% Model Relationships

    class Account
    class AccountCode
    class BankDetail
    class Benefit
    class BudgetCode
    class Contract
    class Department
    class Permission
    class ExitManagement
    class Guarantor
    class Leave
    class LeaveType
    class MaritalDetail
    class NextOfKin
    class Notification
    class Organization
    class PaySchedule
    class Payslip
    class ProjectFunder
    class Qualification
    class Requisition
    class TimeSheet
    class Vendor
    Account "1" --> "1" Organization : organizationId (required)
    AccountCode "1" --> "1" Organization : organizationId (required)
    BankDetail "1" --> "1" Organization : organizationId (required)
    Benefit "1" ..> "1" Department : department
    BudgetCode "1" --> "1" Organization : organizationId (required)
    Contract "1" ..> "1" Vendor : awardedVendor
    Contract "1" --> "1" Organization : organizationId (required)
    Department "1" --> "1" Organization : organizationId (required)
    ExitManagement "1" --> "1" Organization : organizationId (required)
    ExitManagement "1" ..> "1" Department : department
    Guarantor "1" --> "1" Organization : organizationId (required)
    Leave "1" --> "1" LeaveType : leaveType (required)
    Leave "1" --> "1" Organization : organizationId (required)
    LeaveType "1" --> "1" Organization : organizationId (required)
    MaritalDetail "1" --> "1" Organization : organizationId (required)
    NextOfKin "1" --> "1" Organization : organizationId (required)
    Notification "1" --> "1" Organization : organizationId (required)
    PaySchedule "1" --> "1" Organization : organizationId (required)
    Payslip "1" --> "1" Organization : organizationId (required)
    ProjectFunder "1" --> "1" Organization : organizationId (required)
    Qualification "1" --> "1" Organization : organizationId (required)
    Requisition "1" --> "1" Organization : organizationId (required)
    TimeSheet "1" --> "1" Organization : organizationId (required)
    Vendor "1" --> "1" Organization : organizationId (required)

    %% Legend
    class Legend {
        --> : One-to-many relationship
        --> : Required one-to-one relationship
        ..> : Optional one-to-one relationship
    }
